--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(227, 222, 222);
+  background-color: rgba(206, 184, 184, 0.185);
 }
 .container {
   max-width: 1280px;
@@ -48,4 +48,154 @@ li {
   color: white;
   border: none;
   cursor: pointer;
+}
+
+----------------------------------
+
+section {
+  border-radius: 24px;
+}
+h2 {
+  margin-top: 32px;
+  margin-bottom: 29px;
+}
+.parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: minmax(200px, auto);
+}
+.box1 {
+  margin-left: 20px;
+}
+.box {
+  background-color: blue;
+}
+.aitem-1 {
+  grid-row: 1/3;
+}
+.fm-class {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 331px;
+  height: 48px;
+  border: 1px solid #0d9ca436;
+  border-radius: 10px;
+}
+.form-margin {
+  margin: 10px auto;
+}
+#subscribeNews {
+  accent-color: #29b24e;
+}
+/* aitem-222 */
+.aitem-2 {
+  grid-row: -1/3;
+}
+.box2 {
+  max-width: 1280px;
+  width: 100%;
+  background-image: url(img/section-1\ photo.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+/* section 22 */
+.father {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+.taitle-height,
+h1 {
+  margin-top: 32px;
+  margin-bottom: 20px;
+}
+.card {
+  width: 350px;
+  background-color: #f8f8f8;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.card-image {
+  position: relative;
+  width: 100%;
+  height: 200px;
+}
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.vip-tag {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: #29b24e;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: bold;
+}
+.card2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  position: absolute;
+  background-color: red;
+}
+.card2 img {
+  width: 18px;
+  height: 18px;
+}
+.icone {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: 20px;
+}
+.card-content {
+  padding: 20px;
+}
+.card-content h2 {
+  margin-top: -16px;
+  font-size: 16px;
+  color: #000000;
+  margin-bottom: 10px;
+}
+.card-content .location {
+  font-size: 14px;
+  color: #000000;
+  margin-bottom: 15px;
+}
+.card-content .price {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 18px;
+  font-weight: bold;
+  color: #29b24e;
+  margin-bottom: 16px;
+}
+.color-span {
+  color: black;
+}
+.property-details {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  margin-top: 24px;
+  color: #000000;
+}
+.property-details span {
+  flex: 1;
+  text-align: center;
 }
