--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,17 @@ body {
   background-color: rgba(206, 184, 184, 0.185);
 }
 .container {
-  max-width: 1500px;
+  max-width: 1480px;
   width: 100%;
   margin: 54px auto;
 }
-.hd-class {
+.main-class {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 70px;
 }
-ul {
+.logo {
   display: flex;
   gap: 48px;
 }
@@ -48,6 +49,9 @@ li {
   color: white;
   border: none;
   cursor: pointer;
+}
+.phone-icon{
+  display: none;
 }
 
 ----------------------------------
@@ -277,18 +281,18 @@ footer a {
     margin: 0 auto;
     padding: 20px;
   }
-  nav,
+  .navbar,
   .bt-class {
     display: none;
   }
   .phone-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 44px;
     height: 44px;
     background-color: #f8f8f8;
     border-radius: 50%;
-    background-image: url(img/search-phone.png);
-    background-position: center;
-    background-repeat: no-repeat;
   }
   .box2 {
     order: -1;
@@ -297,6 +301,7 @@ footer a {
     border-radius: 24px;
     font-size: 14px;
     margin: 28px 6% 20px 6%;
+    margin-top: -80px;
   }
   .box2 h1 {
     font-size: 24px;
